Navigation set up and tested for HomeScreen to ShoppingScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">StockPalApp</string>
+    <string name="missing">Du mangler:</string>
+    <string name="recommodation">Dagens anbefaling</string>
+    <string name="mypantry">Mitt matskap</string>
+    <string name="stockpal">StockPal</string>
 </resources>
