Changed to timestamp on expDate. expDate now shows in Pantry and also the 5 closest exp dates on homescreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="signup">Sign Up</string>
     <string name="alreadyRegistered">Allerede registert?</string>
     <string name="name">Navn</string>
+    <string name="closest_expdate">Nærmeste utløpsdatoer</string>
 </resources>
