--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,13 @@
     <string name="alreadyRegistered">Allerede registert?</string>
     <string name="name">Navn</string>
     <string name="closest_expdate">Nærmeste utløpsdatoer</string>
+    <string name="add_pantryitem">Legg til en matvare</string>
+    <string name="item_name">Varenavn</string>
+    <string name="ean">EAN-nummer</string>
+    <string name="ammount">Antall</string>
+    <string name="category">Kategori</string>
+    <string name="exp_date">Utløpsdato DDMMYY</string>
+    <string name="save">Lagre</string>
+    <string name="required">Obligatorisk</string>
+    <string name="scan_item">Scanne vare</string>
 </resources>
