--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="example_icon">Example Icon</string>
     <string name="yes_remove">Ja, fjern</string>
     <string name="dont_remove">Nei, ikke fjern</string>
+    <string name="img_url">Bilde-URL</string>
+    <string name="not_required">Ikke obligatorisk</string>
 </resources>
