--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="dont_remove">Nei, ikke fjern</string>
     <string name="img_url">Bilde-URL</string>
     <string name="not_required">Ikke obligatorisk</string>
-    <string name="closest_exp_date">Utløper snart:</string>
+    <string name="closest_exp_date">Nærmeste utløpsdatoer</string>
     <string name="to_all_items">Se alle varer</string>
+    <string name="soon_expired">Utløper snart!</string>
+    <string name="expired">Utgått!</string>
 </resources>
