--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="img_url">Bilde-URL</string>
     <string name="not_required">Ikke obligatorisk</string>
     <string name="closest_exp_date">Nærmeste utløpsdatoer</string>
-    <string name="to_all_items">Se alle varer</string>
+    <string name="to_all_items">Alle varer</string>
     <string name="soon_expired">Utløper snart!</string>
     <string name="expired">Utgått!</string>
     <string name="mandatoryInput">Obligatorisk - Input kan ikke være tom</string>
@@ -66,9 +66,27 @@
     <string name="cooking_time_headline">"Tid: "</string>
     <string name="ingredients_headline">"Ingredienser: "</string>
     <string name="instructions_headline">"Instruksjoner: "</string>
-    <string name="shopping_list_rem_conf">Er du helt sikker på at du vil du fjerne varen fra Handlelisten?</string>
+    <string name="shopping_list_rem_conf">Er du sikker på at du vil du fjerne varen fra handlelisten?</string>
     <string name="shoppinglist_rem">Vil du fjerne varen?</string>
     <string name="add_to_pantry">Vil du legge til produktet i matskapet?</string>
     <string name="pantry_add_conf">Er du sikker på at du vil du legge til produktet i matskapet?</string>
     <string name="no_products_found">Fant ingen produkter</string>
+    <string name="ean_number">Søk på EAN-nummer</string>
+    <string name="frozen_category">Frysevarer</string>
+    <string name="save_to_pantry">Lagre til Matskap</string>
+    <string name="save_to_list">Lagre til Handleliste</string>
+    <string name="save_scanned_to_list">Lagre Scannede varer til Handleliste</string>
+    <string name="save_scanned_to_pantry">Lagre Scannede varer til Matskapet</string>
+    <string name="hello">"Hei "</string>
+    <string name="expiry_date_warning_icon">Expiry date warning icon</string>
+    <string name="expired_item_delete">Expired item delete</string>
+    <string name="all_recipes">Alle oppskrifter</string>
+    <string name="your_profile">Your profile</string>
+    <string name="log_out">Logg ut</string>
+    <string name="profile_pic_placeholder">profile pic placeholder</string>
+    <string name="chng_to_light">Bytt til light mode</string>
+    <string name="chng_to_dark">Bytt til dark mode</string>
+    <string name="settings">Settings</string>
+    <string name="error_signing_up">Opprettelse av ny bruker feilet</string>
+    <string name="user_created">Ny bruker opprettet</string>
 </resources>
